--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -15,8 +15,14 @@
   </ion-header>
 
   <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Hello Enko </ion-card-title>
+        <ion-card-subtitle>hehe</ion-card-subtitle>
+      </ion-card-header>
 
-    <ion-button id="open-modal" expand="block">Open</ion-button>
+      <ion-card-content> hi boys </ion-card-content>
+    </ion-card>
+    <ion-button (click)="login()">Go to Page Folder</ion-button>
   </div>
 </ion-content>
